<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:layout_marginEnd="20dip"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/reserve_a_table"
                android:textSize="35sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="#000000" />

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dip"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/please_enter_your_name"
                    android:inputType="text"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/numLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:text="@string/contact_no"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/numInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/please_enter_contact_number"
                    android:inputType="number"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/grpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:text="@string/group_size"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/grpInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/please_enter_group_size"
                    android:inputType="number"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/tableArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/select_table_area"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/smokingRG"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBtnSmoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoking_area" />

                    <RadioButton
                        android:id="@+id/radioBtnNoSmoke"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/non_smoking_area" />
                </LinearLayout>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/btnLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>